--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>life.savag3</groupId>
-    <artifactId>SupremeCleaner</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Lazy</artifactId>
+    <version>1.0.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
